--- a/eShop/eShop.csproj
+++ b/eShop/eShop.csproj
@@ -14,7 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.9" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +24,7 @@
     <Folder Include="Database\DataSeeders\" />
     <Folder Include="Common\" />
     <Folder Include="Database\DataSeeders\" />
+    <Folder Include="UploadFiles\" />
   </ItemGroup>
 
   <ItemGroup>
